test/langtools/tools/javac/dslblocks/DslBlockNeg01.out
DslBlockNeg01.java:16:20: compiler.err.unexpected.type: kindname.value, kindname.void
1 error
